--- a/src/app/pages/create-bnea/create-bnea.component.html
+++ b/src/app/pages/create-bnea/create-bnea.component.html
@@ -185,7 +185,7 @@
                       id="idRolTrabajo"
                       aria-label="Rol de trabajo"
                     >
-                      <option selected>Elige una rol</option>
+                      <option selected>Elige un rol</option>
                       <option *ngFor="let item of cRol" [value]="item.id">
                         {{ item.rolTrabajo }}
                       </option>
@@ -234,7 +234,10 @@
                       aria-label="Rol de trabajo"
                     >
                       <option selected>Elige una rol</option>
-                      <option *ngFor="let item of cRol" [value]="item.id">
+                      <option
+                        *ngFor="let item of cRolReciber"
+                        [value]="item.id"
+                      >
                         {{ item.rolTrabajo }}
                       </option>
                     </select>
@@ -424,7 +427,7 @@
                 <!-- formulario -->
                 <div class="col-12 my-3">
                   <div class="row">
-                    <div class="col-12">
+                    <div class="col-6">
                       <div class="form-floating mb-3">
                         <input
                           formControlName="situacion"
@@ -437,6 +440,19 @@
                         <label for="situacionActual"
                           >Definición de la Situación Actual</label
                         >
+                      </div>
+                    </div>
+                    <div class="col-6">
+                      <div class="form-floating mb-3">
+                        <input
+                          formControlName="alcance"
+                          type="text"
+                          class="form-control input-style"
+                          title="Alcance"
+                          id="alcance"
+                          placeholder="Alcance"
+                        />
+                        <label for="alcance">Alcance</label>
                       </div>
                     </div>
                   </div>
@@ -549,16 +565,48 @@
                 </div>
                 <!-- fuera de alcance -->
                 <div class="col-12">
-                  <div class="col-12 col-md-6">
-                    <div class="form-floating mb-3">
-                      <input
-                        formControlName="alcance"
-                        type="text"
-                        class="form-control input-style"
-                        id="fueAlcance"
-                        placeholder="Fuera de alcance"
-                      />
-                      <label for="fueAlcance">Fuera de alcance</label>
+                  <div class="row">
+                    <div class="col-12 col-md-6">
+                      <div class="form-floating mb-3">
+                        <input
+                          formControlName="alcance"
+                          type="text"
+                          class="form-control input-style"
+                          id="fueAlcance"
+                          placeholder="Fuera de alcance"
+                        />
+                        <label for="fueAlcance">Fuera de alcance</label>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <div class="row">
+                        <div class="col-10">
+                          <div class="form-floating textarea-h">
+                            <textarea
+                              id="BeneficioIniciativa"
+                              formControlName="beneficios"
+                              rows="6"
+                              class="form-control input-style"
+                              placeholder="Definir lo que se quiere lograr con la iniciativa."
+                            ></textarea>
+                            <label for="BeneficioIniciativa"
+                              >Estimación de los beneficios de la
+                              iniciativa</label
+                            >
+                          </div>
+                        </div>
+                        <div class="col-2 alin-center">
+                          <button
+                            type="button"
+                            class="btn btn-light"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="bottom"
+                            title="Incluir la descripción de los beneficios suaves, beneficios potenciales, de presupuesto o de impacto en ventas identificados."
+                          >
+                            <i class="bi bi-info-circle"></i>
+                          </button>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -3458,105 +3506,188 @@
                     >Seleccione los entregables que generará el proyecto</span
                   >
                 </div>
+                <!-- formulario -->
+                <div class="col-12 my-3 text-end">
+                  <span (click)="addDocument()" class="add-beneficit"
+                    >Agregar Documento
+                    <img src="./assets/icon/icon-add.png" alt="icon agregar" />
+                  </span>
+                </div>
               </div>
               <!-- form -->
               <!-- 1 row -->
-              <div class="row my-3">
-                <div class="col-4">
-                  <div class="row">
-                    <div class="col-2 align-center">
-                      <input
-                        formControlName="acta"
-                        class="form-check-input checkbox-style"
-                        type="checkbox"
-                        value=""
-                        id="acta12"
-                      />
-                    </div>
-                    <div class="col-10 align-center">
-                      <label for="acta12" class="label-check">
-                        Acta de constitución
-                      </label>
-                    </div>
-                  </div>
+              <div
+                class="row my-2"
+                *ngFor="let item of documento; index as index"
+              >
+                <div class="col-12 text-end my-1" *ngIf="index != 0">
+                  <img
+                    (click)="deleteDocumento(item, index)"
+                    class="delete-icon"
+                    src="./assets/icon/icon-delete.png"
+                    alt="icon delete"
+                  />
                 </div>
-                <div class="col-4">
-                  <div class="row">
-                    <div class="col-2 align-center">
-                      <input
-                        formControlName="planTrabajo"
-                        class="form-check-input checkbox-style"
-                        type="checkbox"
-                        value=""
-                        id="planTrabajo12"
-                      />
+                <div class="col-12">
+                  <div class="row align-self-center">
+                    <div class="col-6 col-md-3">
+                      <span class="lab-span">Documento</span>
                     </div>
-                    <div class="col-10 align-center">
-                      <label for="planTrabajo12" class="label-check">
-                        Plan de trabajo
-                      </label>
+                    <div class="col-6 col-md-3">
+                      <div class="form-floating mb-3">
+                        <input
+                          [ngModelOptions]="{ standalone: true }"
+                          [(ngModel)]="item.documento"
+                          type="text"
+                          class="form-control input-style"
+                          id="documento"
+                          placeholder="documento"
+                        />
+                        <label for="documento">Documento</label>
+                      </div>
                     </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="row">
-                    <div class="col-2 align-center">
-                      <input
-                        formControlName="reporte"
-                        class="form-check-input checkbox-style"
-                        type="checkbox"
-                        value=""
-                        id="reporte12"
-                      />
+                    <div class="col-6 col-md-3">
+                      <span class="lab-span">Validador</span>
                     </div>
-                    <div class="col-10 align-center">
-                      <label for="reporte12" class="label-check">
-                        Reporte de avances semanales
-                      </label>
+                    <div class="col-6 col-md-3">
+                      <div class="form-floating mb-3">
+                        <input
+                          [ngModelOptions]="{ standalone: true }"
+                          [(ngModel)]="item.validador"
+                          type="text"
+                          class="form-control input-style"
+                          id="validador"
+                        />
+                        <label for="validador">Validador</label>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <!-- 2 row -->
-              <div class="row my-3">
-                <div class="col-4">
-                  <div class="row">
-                    <div class="col-2 align-center">
-                      <input
-                        formControlName="carta"
-                        class="form-check-input checkbox-style"
-                        type="checkbox"
-                        value=""
-                        id="carta12"
-                      />
-                    </div>
-                    <div class="col-10 align-center">
-                      <label for="carta12" class="label-check">
-                        Carta de entrega del proyecto
-                      </label>
-                    </div>
-                  </div>
+
+              <!-- btn -->
+              <div class="row">
+                <div class="col-12 text-end my-3">
+                  <button
+                    matStepperPrevious
+                    type="button"
+                    class="btn btn-warning btn-entrar"
+                  >
+                    <span class="text-btn text-dark"> < Regresar </span>
+                  </button>
+                   <button
+                    matStepperNext
+                    type="button"
+                    class="btn btn-dark btn-entrar"
+                  >
+                    <span class="text-warning text-btn"> Continuar > </span>
+                  </button>
                 </div>
-                <div class="col-4">
-                  <div class="row">
-                    <div class="col-2 align-center">
-                      <input
-                        formControlName="manual"
-                        class="form-check-input checkbox-style"
-                        type="checkbox"
-                        value=""
-                        id="manual12"
-                      />
-                    </div>
-                    <div class="col-10 align-center">
-                      <label for="manual12" class="label-check">
-                        Manual de instalación de Código Backup de producción
-                      </label>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4"></div>
               </div>
+              <div class="row">
+                <div class="col-12 text-end my-3">
+                  <button
+                    (click)="step13()"
+                    matStepperNext
+                    type="button"
+                    class="btn btn-info btn-entrar"
+                  >
+                    <span class="text-warning text-btn"> Guardar </span>
+                  </button>
+                </div>
+              </div>
+            </form>
+          </mat-step>
+          <!-- 14 paso  -->
+          <mat-step [stepControl]="thirteenFormGroup">
+            <form [formGroup]="thirteenFormGroup">
+              <div class="row">
+                <div class="col-12">
+                  <span class="text-step"
+                    >Paso 14
+                    <span class="subtitle-step">
+                      Hitos principales de la iniciativa
+                    </span>
+                  </span>
+                </div>
+                <div class="col-12 my-3">
+                  <span class="parag-step"
+                    >Hitos principales de la iniciativa</span
+                  >
+                </div>
+                <!-- formulario -->
+                <div class="col-12 my-3 text-end">
+                  <span (click)="addHito()" class="add-beneficit"
+                    >Agregar Hito
+                    <img src="./assets/icon/icon-add.png" alt="icon agregar" />
+                  </span>
+                </div>
+              </div>
+              <!-- form -->
+              <!-- 1 row -->
+              <div class="row my-2" *ngFor="let item of hito; index as index">
+                <div class="col-12 text-end my-1" *ngIf="index != 0">
+                  <img
+                    (click)="deleteHito(item, index)"
+                    class="delete-icon"
+                    src="./assets/icon/icon-delete.png"
+                    alt="icon delete"
+                  />
+                </div>
+                <div class="col-12">
+                  <div class="row align-self-center">
+                    <div class="col-6 col-md-3">
+                      <span class="lab-span">Hito</span>
+                    </div>
+                    <div class="col-6 col-md-3">
+                      <div class="form-floating mb-3">
+                        <input
+                          [ngModelOptions]="{ standalone: true }"
+                          [(ngModel)]="item.hito"
+                          type="text"
+                          class="form-control input-style"
+                          id="hito"
+                          placeholder="hito"
+                        />
+                        <label for="hito">Hito</label>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row align-self-center">
+                    <div class="col-6 col-md-3">
+                      <span class="lab-span">Fecha Inicio</span>
+                    </div>
+                    <div class="col-6 col-md-3">
+                      <div class="form-floating mb-3">
+                        <input
+                          [ngModelOptions]="{ standalone: true }"
+                          [(ngModel)]="item.fechaInicio"
+                          type="date"
+                          class="form-control input-style"
+                          id="fechaInicio"
+                        />
+                        <label for="fechaInicio">Fecha Inicio</label>
+                      </div>
+                    </div>
+                    <div class="col-6 col-md-3">
+                      <span class="lab-span">Fecha Fin</span>
+                    </div>
+                    <div class="col-6 col-md-3">
+                      <div class="form-floating mb-3">
+                        <input
+                          [ngModelOptions]="{ standalone: true }"
+                          [(ngModel)]="item.fechaFin"
+                          type="date"
+                          class="form-control input-style"
+                          id="fechaFin"
+                        />
+                        <label for="fechaFin">Fecha Fin</label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <!-- btn -->
               <div class="row">
                 <div class="col-12 text-end my-3">
@@ -3572,8 +3703,7 @@
               <div class="row">
                 <div class="col-12 text-end my-3">
                   <button
-                    [disabled]="!thirteenFormGroup.valid"
-                    (click)="step13()"
+                    (click)="step14()"
                     matStepperNext
                     type="button"
                     class="btn btn-info btn-entrar"
