Ajuste de paso 11
Ajuste de paso 11  tasa de error

--- a/src/app/pages/create-bnea/create-bnea.component.html
+++ b/src/app/pages/create-bnea/create-bnea.component.html
@@ -3134,7 +3134,7 @@
                     <div class="col-6 col-md-3">
                       <div class="form-floating mb-3">
                         <input
-                          formControlName="tasaError"
+                          formControlName="tazaError"
                           min="1"
                           type="number"
                           class="form-control input-style"
